feat: form validation feat: implement translation messages change: add message action fix: environment variable

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -1,18 +1,25 @@
 {
-    "login": {
+  "login": {
+    "form": {
       "email": "Email",
-      "password": "Password",
-      "submit": "Login",
-      "register-instruction": "Not registered yet?",
-      "register-link": "Create an account"
+      "password": "Password"
     },
-    "register": {
+    "submit-button": "Login",
+    "register-instruction": "Not registered yet?",
+    "register-link": "Create an account"
+  },
+  "register": {
+    "form": {
       "display-name": "Display Name",
       "email": "Email",
       "password": "Password",
-      "confirm-password": "Confirm Password",
-      "submit": "Register",
-      "login-instruction": "Already have an account?",
-      "login-link": "Sign in"
+      "confirm-password": "Confirm Password"
+    },
+    "submit-button": "Register",
+    "login-instruction": "Already have an account?",
+    "login-link": "Sign in",
+    "messages": {
+      "user-created-successfully": "User created successfully"
     }
   }
+}
