refactor: change feature messages -> notification feat: add feature chat feat: implemented menubar feat: implemented dark mode feat: implemented i18n

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -17,9 +17,6 @@
     },
     "submit-button": "Register",
     "login-instruction": "Already have an account?",
-    "login-link": "Sign in",
-    "messages": {
-      "user-created-successfully": "User created successfully"
-    }
+    "login-link": "Sign in"
   }
 }
