feat: implement play victory point card refactor: play knight card refactor: play road building card refactor: play year of plenty card refactor: play monopoly card refactor: maritime trade feat: implement lazy load image with placeholder fix: loading screen not implemented dark mode

--- a/public/locales/en/catan.json
+++ b/public/locales/en/catan.json
@@ -23,7 +23,12 @@
             "cancel-button": "Cancel",
             "confirm-button": "Confirm",
             "end-turn-button": "End Turn",
-            "confirm-trading-dialog": {
+            "maritime-trade-dialog": {
+                "title": "Maritime trade",
+                "cancel-button": "Cancel",
+                "confirm-button": "Confirm"
+            },
+            "confirm-trade-offer-dialog": {
                 "title": "Active player want to trade with you",
                 "cancel-button": "Cancel",
                 "confirm-button": "Confirm"
