--- a/public/locales/en/notification.json
+++ b/public/locales/en/notification.json
@@ -28,6 +28,14 @@
     "player-is-offering-resources": "{{player}} is offering {{resources}}",
     "you-must-discard-resource-cards_one": "you must discard {{count}} resource card",
     "you-must-discard-resource-cards_other": "you must discard {{count}} resource cards",
+    "please-select-land-you-want-to-build-settlement": "please select land you want to build settlement",
+    "please-select-path-you-want-to-build-road": "please select path you want to build road",
+    "please-select-resource-card-you-want-to-trade": "please select resource card you want to trade",
+    "please-select-resource-card-you-want-to-offer": "please select resource card you want to offer",
+    "please-select-terrain-which-robber-will-move-on": "please select terrain which robber will move on",
+    "please-select-at-least-one-path-you-want-to-build-road": "please select at least one path you want to build road",
+    "please-select-at-least-one-resource-card-you-want-to-draw": "please select at least one resource card you want to draw",
+    "please-select-one-resource-card-you-want-to-gather-from-other-players": "please select one resource card you want to gather from other players",
     "lumber": "lumber",
     "brick": "brick",
     "wool": "wool",
