--- a/public/locales/vi/notification.json
+++ b/public/locales/vi/notification.json
@@ -28,6 +28,14 @@
     "player-is-offering-resources": "{{player}} đang đề xuất {{resources}}",
     "you-must-discard-resource-cards_one": "bạn phải bỏ {{count}} thẻ tài nguyên",
     "you-must-discard-resource-cards_other": "bạn phải bỏ {{count}} thẻ tài nguyên",
+    "please-select-land-you-want-to-build-settlement": "hãy chọn vùng đất mà bạn muốn xây thị trấn",
+    "please-select-path-you-want-to-build-road": "hãy chọn đường mòn mà bạn muốn xây đường",
+    "please-select-resource-card-you-want-to-trade": "hãy chọn thẻ tài nguyên mà bạn muốn trao đổi",
+    "please-select-resource-card-you-want-to-offer": "hãy chọn thẻ tài nguyên mà bạn muốn cung ứng",
+    "please-select-terrain-which-robber-will-move-on": "hãy chọn vùng đất mà cướp sẽ di chuyển đến",
+    "please-select-at-least-one-path-you-want-to-build-road": "hãy chọn ít nhất một đường mòn mà bạn muốn xây đường",
+    "please-select-at-least-one-resource-card-you-want-to-draw": "hãy chọn ít nhất một thẻ tài nguyên mà bạn muốn rút",
+    "please-select-one-resource-card-you-want-to-gather-from-other-players": "hãy chọn một tài nguyên mà bạn muốn gom từ nhừng người chơi khác",
     "lumber": "gỗ",
     "brick": "gạch",
     "wool": "cừu",
